--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,9 @@ dependencies = [
     "pytest-asyncio>=1.3.0",
     "python-dotenv>=1.2.1",
 ]
+
+[tool.uv.workspace]
+members = [
+    "uipath-orchestrator",
+    "mcp-uipath-orchestrator",
+]
